--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ca.properties
@@ -798,7 +798,7 @@ api-account-id=ID del compte de l'API
 api-endpoint=Extrem de l'API
 api-endpoint-description=Estableix l'extrem de Computer Vision API V2 (p. ex.: {0}). Vegeu {1} per obtenir més informació.
 api-login-id=ID de connexió de l'API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de l'API
 api-username=ID de l'usuari de l'API
 app-id=ID de l'aplicació
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Color de marca primari
 color-brand-primary-darken-1=Color de marca primari fosc 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Color de marca primari fosc 3
 color-brand-primary-darken-4=Color de marca primari fosc 4
 color-brand-primary-darken-5=Color de marca primari fosc 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color de marca primari clar 5
 color-brand-primary-lighten-6=Color de marca primari clar 6
 color-brand-secondary=Color de marca secundari
 color-brand-secondary-darken-1=Color de marca secundari fosc 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Color de marca secundari fosc 3
 color-brand-secondary-darken-4=Color de marca secundari fosc 4
 color-brand-secondary-darken-5=Color de marca secundari fosc 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Seleccioneu un color d'un selector de color.
 color-field-type-label=Color
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Color Neutre 0
 color-neutral-1=Color Neutre 1
 color-neutral-2=Color Neutre 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Color Neutre 9
 color-neutral-10=Color Neutre 10
 color-scheme=Esquema de color
 color-state-error=Color d'estat d'error
-color-state-error-lighten=Color d'estat d'error clar
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Color d'estat d'informació
-color-state-info-lighten=Color d'estat d'informació clar
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Color d'estat d'operació correcta
-color-state-success-lighten=Color d'estat d'operació correcta clar
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Color d'estat d'avís
-color-state-warning-lighten=Color d'estat d'avís clar
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Sistema de color
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Assignació personalitzada de contacte
 custom-control=Control personalitzat
 custom-control-border-color=Color de vora de control personalitzat
 custom-control-disabled-border-color=Color de vora desactivada de control personalitzat
-custom-control-focus-color=Color de focus de control personalitzat
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Color d'etiqueta de control personalitzat
 custom-control-label-font-size=Mida de lletra d'etiqueta de control personalitzat
 custom-control-label-font-weight=Gruix de lletra d'etiqueta de control personalitzat
