--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_de.properties
@@ -798,7 +798,7 @@ api-account-id=API-Konto-ID
 api-endpoint=API-Endpunkt
 api-endpoint-description=Setzt den Endpunkt für die Computer Vision API V2 (z.B. {0}). Siehe {1} für weitere Informationen.
 api-login-id=API-Login-ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API-URL
 api-username=API-Benutzer-ID
 app-id=App-ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Color Brand Primary
 color-brand-primary-darken-1=Color Brand Primary Darken 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Color Brand Primary Darken 3
 color-brand-primary-darken-4=Color Brand Primary Darken 4
 color-brand-primary-darken-5=Color Brand Primary Darken 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color Brand Primary Lighten 5
 color-brand-primary-lighten-6=Color Brand Primary Lighten 6
 color-brand-secondary=Color Brand Secondary
 color-brand-secondary-darken-1=Color Brand Secondary Darken 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Color Brand Secondary Darken 3
 color-brand-secondary-darken-4=Color Brand Secondary Darken 4
 color-brand-secondary-darken-5=Color Brand Secondary Darken 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Wählen Sie eine Farbe in einem Farbwähler aus.
 color-field-type-label=Farbe
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Neutrale Farbe 0
 color-neutral-1=Neutrale Farbe 1
 color-neutral-2=Neutrale Farbe 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Neutrale Farbe 9
 color-neutral-10=Neutrale Farbe 10
 color-scheme=Farbschema
 color-state-error=Farbstatus Fehler
-color-state-error-lighten=Farbstatus Fehler Aufhellen
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Farbstatus Info
-color-state-info-lighten=Farbstatus Info Aufhellen
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Farbstatus Erfolg
-color-state-success-lighten=Farbstatus Erfolg Aufhellen
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Farbstatus Warnung
-color-state-warning-lighten=Farbstatus Warnung Aufhellen
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Farbsystem
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Benutzerdefinierte Kontaktzuordnung
 custom-control=Benutzerdefiniertes Steuerelement
 custom-control-border-color=Benutzerdefiniertes Steuerelement Rahmenfarbe
 custom-control-disabled-border-color=Benutzerdefiniertes Steuerelement Deaktiviert Rahmenfarbe
-custom-control-focus-color=Benutzerdefiniertes Steuerelement Fokusfarbe
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Benutzerdefiniertes Steuerelement Label Farbe
 custom-control-label-font-size=Benutzerdefiniertes Steuerelement Label Schriftgröße
 custom-control-label-font-weight=Benutzerdefiniertes Steuerelement Label Schriftbreite
