--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_en.properties
@@ -798,7 +798,7 @@ api-account-id=API Account ID
 api-endpoint=API Endpoint
 api-endpoint-description=Set the endpoint for the Computer Vision API V2 (e.g. {0}). See {1} for more information.
 api-login-id=API Login ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again.
 api-url=API URL
 api-username=API User ID
 app-id=App ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover
 color-action-secondary-visited=Color Action Secondary Visited
 color-brand-primary=Color Brand Primary
 color-brand-primary-darken-1=Color Brand Primary Darken 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2
 color-brand-primary-darken-3=Color Brand Primary Darken 3
 color-brand-primary-darken-4=Color Brand Primary Darken 4
 color-brand-primary-darken-5=Color Brand Primary Darken 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color Brand Primary Lighten 5
 color-brand-primary-lighten-6=Color Brand Primary Lighten 6
 color-brand-secondary=Color Brand Secondary
 color-brand-secondary-darken-1=Color Brand Secondary Darken 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2
 color-brand-secondary-darken-3=Color Brand Secondary Darken 3
 color-brand-secondary-darken-4=Color Brand Secondary Darken 4
 color-brand-secondary-darken-5=Color Brand Secondary Darken 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4
 color-chart-5=Color Chart 5
 color-field-type-description=Select color from a color picker.
 color-field-type-label=Color
+color-focus=Color Focus
 color-neutral-0=Color Neutral 0
 color-neutral-1=Color Neutral 1
 color-neutral-2=Color Neutral 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Color Neutral 9
 color-neutral-10=Color Neutral 10
 color-scheme=Color Scheme
 color-state-error=Color State Error
-color-state-error-lighten=Color State Error Lighten
+color-state-error-darken-1=Color State Error Darken 1
+color-state-error-darken-2=Color State Error Darken 2
+color-state-error-lighten-1=Color State Error Lighten 1
+color-state-error-lighten-2=Color State Error Lighten 2
 color-state-info=Color State Info
-color-state-info-lighten=Color State Info Lighten
+color-state-info-darken-1=Color State Info Darken 1
+color-state-info-darken-2=Color State Info Darken 2
+color-state-info-lighten-1=Color State Info Lighten 1
+color-state-info-lighten-2=Color State Info Lighten 2
 color-state-success=Color State Success
-color-state-success-lighten=Color State Success Lighten
+color-state-success-darken-1=Color State Success Darken 1
+color-state-success-darken-2=Color State Success Darken 2
+color-state-success-lighten-1=Color State Success Lighten 1
+color-state-success-lighten-2=Color State Success Lighten 2
 color-state-warning=Color State Warning
-color-state-warning-lighten=Color State Warning Lighten
+color-state-warning-darken-1=Color State Warning Darken 1
+color-state-warning-darken-2=Color State Warning Darken 2
+color-state-warning-lighten-1=Color State Warning Lighten 1
+color-state-warning-lighten-2=Color State Warning Lighten 2
 color-system=Color System
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Custom Contact Mapping
 custom-control=Custom Control
 custom-control-border-color=Custom Control Border Color
 custom-control-disabled-border-color=Custom Control Disabled Border Color
-custom-control-focus-color=Custom Control Focus Color
+custom-control-hover-color=Custom Control Hover Color
 custom-control-label-color=Custom Control Label Color
 custom-control-label-font-size=Custom Control Label Font Size
 custom-control-label-font-weight=Custom Control Label Font Weight
