--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_es.properties
@@ -798,7 +798,7 @@ api-account-id=Identificador de cuenta de la API
 api-endpoint=Endpoint de la API
 api-endpoint-description=Establece el endpoint de la API de Computer Vision v2 (por ejemplo, {0}). Para obtener más información, consulte {1}.
 api-login-id=Identificador de inicio de sesión de la API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de la API
 api-username=Identificador de usuario de la API
 app-id=Identificador de aplicación
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Color primario de marca
 color-brand-primary-darken-1=Color primario de marca oscuro 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Color primario de marca oscuro 3
 color-brand-primary-darken-4=Color primario de marca oscuro 4
 color-brand-primary-darken-5=Color primario de marca oscuro 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color primario de marca claro 5
 color-brand-primary-lighten-6=Color primario de marca claro 6
 color-brand-secondary=Color secundario de marca
 color-brand-secondary-darken-1=Color secundario de marca oscuro 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Color secundario de marca oscuro 3
 color-brand-secondary-darken-4=Color secundario de marca oscuro 4
 color-brand-secondary-darken-5=Color secundario de marca oscuro 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Seleccione un color mediante un selector de colores.
 color-field-type-label=Color
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Color neutro 0
 color-neutral-1=Color neutro 1
 color-neutral-2=Color neutro 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Color neutro 9
 color-neutral-10=Color neutro 10
 color-scheme=Gamas de color
 color-state-error=Color de estado de error
-color-state-error-lighten=Color de estado de error claro
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Color de estado de información
-color-state-info-lighten=Color de estado de información claro
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Color de estado de operación correcta
-color-state-success-lighten=Color de estado de operación correcta claro
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Color de estado de advertencia
-color-state-warning-lighten=Color de estado de advertencia claro
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Sistema de colores
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Asignación personalizada del contacto
 custom-control=Control personalizado
 custom-control-border-color=Color de borde de control personalizado
 custom-control-disabled-border-color=Color de borde de control personalizado deshabilitado
-custom-control-focus-color=Color de control personalizado con foco
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Color de etiqueta de control personalizado
 custom-control-label-font-size=Tamaño de fuente de etiqueta de control personalizado
 custom-control-label-font-weight=Grosor de fuente de etiqueta de control personalizado
