--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fi.properties
@@ -798,7 +798,7 @@ api-account-id=API-tilin ID
 api-endpoint=API-päätepisteet
 api-endpoint-description=Asettaa päätepisteen Computer Vision API V2:lle (esim. {0}). Katso lisätietoja kohdasta {1}.
 api-login-id=API-käyttäjätunnus
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API-käyttäjän ID
 app-id=Sovellustunnus
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Väri brändin ensisijainen
 color-brand-primary-darken-1=Väri brändin ensisijainen tummennus 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Väri brändin ensisijainen tummennus 3
 color-brand-primary-darken-4=Väri brändin ensisijainen tummennus 4
 color-brand-primary-darken-5=Väri brändin ensisijainen tummennus 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Väri brändin ensisijainen vaalennus 5
 color-brand-primary-lighten-6=Väri brändin ensisijainen vaalennus 6
 color-brand-secondary=Väri brändin toissijainen
 color-brand-secondary-darken-1=Väri brändin toissijainen tummennus 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Väri brändin toissijainen tummennus 3
 color-brand-secondary-darken-4=Väri brändin toissijainen tummennus 4
 color-brand-secondary-darken-5=Väri brändin toissijainen tummennus 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Valitse väri värinvalitsimesta.
 color-field-type-label=Väri
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Väri neutraali 0
 color-neutral-1=Väri neutraali 1
 color-neutral-2=Väri neutraali 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Väri neutraali 9
 color-neutral-10=Väri neutraali 10
 color-scheme=Väriteemat
 color-state-error=Väri tila virhe
-color-state-error-lighten=Väri tila virhe vaalennus
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Väri tila info
-color-state-info-lighten=Väri tila info vaalennus
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Väri tila onnistuminen
-color-state-success-lighten=Väri tila onnistuminen vaalennus
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Väri tila varoitus
-color-state-warning-lighten=Väri tila varoitus vaalennus
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Värijärjestelmä
 com.liferay.configuration.admin.web.test.attribute.description=Testi_Attribuutin_Kuvaus
 com.liferay.configuration.admin.web.test.attribute.name=Testi_Attribuutin_Nimi
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Henkilön yhteystietojen mukautettujen kenttien yhdistäm
 custom-control=Mukautettu hallinta
 custom-control-border-color=Mukautettu hallinta reunan väri
 custom-control-disabled-border-color=Mukautettu hallinta pois käytöstä reunan väri
-custom-control-focus-color=Mukautettu hallinta kohdistusväri
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Mukautettu hallinta selite väri
 custom-control-label-font-size=Mukautettu hallinta selite fonttikoko
 custom-control-label-font-weight=Mukautettu hallinta selite fontin paksuus
