--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_hu.properties
@@ -798,7 +798,7 @@ api-account-id=API fiókazonosítója
 api-endpoint=API végpont
 api-endpoint-description=Beállítja a végpontot a Computer Vision API V2 számára (pl. {0}). További tudnivalók lásd: {1}.
 api-login-id=API bejelentkezési azonosító
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API felhasználói azonosítója
 app-id=Alkalmazás azonosítója
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Szín, márka, elsődleges
 color-brand-primary-darken-1=Szín, márka, elsődleges, sötétítés 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Szín, márka, elsődleges, sötétítés 3
 color-brand-primary-darken-4=Szín, márka, elsődleges, sötétítés 4
 color-brand-primary-darken-5=Szín, márka, elsődleges, sötétítés 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Szín, márka, elsődleges, világosítás 5
 color-brand-primary-lighten-6=Szín, márka, elsődleges, világosítás 6
 color-brand-secondary=Szín, márka, másodlagos
 color-brand-secondary-darken-1=Szín, márka, másodlagos, sötétítés 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Szín, márka, másodlagos, sötétítés 3
 color-brand-secondary-darken-4=Szín, márka, másodlagos, sötétítés 4
 color-brand-secondary-darken-5=Szín, márka, másodlagos, sötétítés 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Válasszon színt egy színválasztóból.
 color-field-type-label=Szín
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Szín, semleges 0
 color-neutral-1=Szín, semleges 1
 color-neutral-2=Szín, semleges 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Szín, semleges 9
 color-neutral-10=Szín, semleges 10
 color-scheme=Színsémák
 color-state-error=Szín, állapot, hiba
-color-state-error-lighten=Szín, állapot, hiba, világosítás
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Szín állapot info
-color-state-info-lighten=Szín, állapot, info, világosítás
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Szín állapot siker
-color-state-success-lighten=Szín állapot siker világosítás
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Szín állapot figyelmeztetés
-color-state-warning-lighten=Szín állapot figyelmeztetés világosítás
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Színrendszer
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Egyéni kapcsolat összerendelés
 custom-control=Egyéni vezérlőelem
 custom-control-border-color=Egyéni vezérlőelem szegélyszíne
 custom-control-disabled-border-color=Egyéni kikapcsolt vezérlőelem szegélyszíne
-custom-control-focus-color=Egyéni vezérlőelem fókuszszíne
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Egyéni vezérlőelem címkeszíne
 custom-control-label-font-size=Egyéni vezérlőelem címke betűméret
 custom-control-label-font-weight=Egyéni vezérlőelem címke betűvastagság
