--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ja.properties
@@ -798,7 +798,7 @@ api-account-id=API アカウント ID
 api-endpoint=APIエンドポイント
 api-endpoint-description=Computer Vision API V2のエンドポイントを設定します（例：{0}）。詳細は{1}をご覧ください。
 api-login-id=API ログイン ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API の URL
 api-username=API ユーザー ID
 app-id=App ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=ブランドプライマリの色
 color-brand-primary-darken-1=ブランドプライマリの色 (暗く 1)
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=ブランドプライマリの色 (暗く 3)
 color-brand-primary-darken-4=ブランドプライマリの色 (暗く 4)
 color-brand-primary-darken-5=ブランドプライマリの色 (暗く 5)
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=ブランドプライマリの色 (明るく 5)
 color-brand-primary-lighten-6=ブランドプライマリの色 (明るく 6)
 color-brand-secondary=ブランドセカンダリの色
 color-brand-secondary-darken-1=ブランドセカンダリの色 (暗く 1)
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=ブランドセカンダリの色 (暗く 3)
 color-brand-secondary-darken-4=ブランドセカンダリの色 (暗く 4)
 color-brand-secondary-darken-5=ブランドセカンダリの色 (暗く 5)
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=カラーピッカーで色を選択します。
 color-field-type-label=色
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=色 (ニュートラル 0)
 color-neutral-1=色 (ニュートラル 1)
 color-neutral-2=色 (ニュートラル 2)
@@ -1919,13 +1922,25 @@ color-neutral-9=色 (ニュートラル 9)
 color-neutral-10=色 (ニュートラル 10)
 color-scheme=配色
 color-state-error=状態のエラーの色
-color-state-error-lighten=状態のエラーの色 (明るく)
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=状態の情報の色
-color-state-info-lighten=状態の情報の色 (明るく)
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=状態の成功の色
-color-state-success-lighten=状態の成功の色 (明るく)
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=状態の警告の色
-color-state-warning-lighten=状態の警告の色 (明るく)
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=色体系
 com.liferay.configuration.admin.web.test.attribute.description=テスト_属性_説明
 com.liferay.configuration.admin.web.test.attribute.name=テスト_属性_名前
@@ -2371,7 +2386,7 @@ custom-contact-mapping=連絡先カスタムマッピング
 custom-control=カスタムコントロール
 custom-control-border-color=カスタムコントロールの枠線の色
 custom-control-disabled-border-color=カスタムコントロールの枠線の色 (無効な場合)
-custom-control-focus-color=カスタムコントロールのフォーカス色
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=カスタムコントロールのラベル色
 custom-control-label-font-size=カスタムコントロールのラベルのフォントサイズ
 custom-control-label-font-weight=カスタムコントロールのラベルのフォントの太さ
