--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_nl.properties
@@ -798,7 +798,7 @@ api-account-id=Account-ID API
 api-endpoint=API-eindpunt
 api-endpoint-description=Stelt het eindpunt voor de Computer Vision API V2 (bijv. {0}). Zie {1} voor meer informatie.
 api-login-id=Login-ID API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=Gebruikers-ID API
 app-id=App-ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Kleur merk, primair
 color-brand-primary-darken-1=Kleur merk, primair verdonkeren 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Kleur merk, primair verdonkeren 3
 color-brand-primary-darken-4=Kleur merk, primair verdonkeren 4
 color-brand-primary-darken-5=Kleur merk, primair verdonkeren 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Kleur merk, primair lichter maken 5
 color-brand-primary-lighten-6=Kleur merk, primair lichter maken 6
 color-brand-secondary=Kleur merk, secundair
 color-brand-secondary-darken-1=Kleur merk, secundair verdonkeren 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Kleur merk, secundair verdonkeren 3
 color-brand-secondary-darken-4=Kleur merk, secundair verdonkeren 4
 color-brand-secondary-darken-5=Kleur merk, secundair verdonkeren 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Selecteer een kleur in een kleurenkiezer.
 color-field-type-label=Kleur
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Kleur neutraal 0
 color-neutral-1=Kleur neutraal 1
 color-neutral-2=Kleur neutraal 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Kleur neutraal 9
 color-neutral-10=Kleur neutraal 10
 color-scheme=Kleurenschema
 color-state-error=Kleur bij foutstatus
-color-state-error-lighten=Kleur lichter maken bij foutstatus
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Kleur bij infostatus
-color-state-info-lighten=Kleur lichter maken bij infostatus
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Kleur bij successtatus
-color-state-success-lighten=Kleur lichter maken bij successtatus
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Kleur bij waarschuwingsstatus
-color-state-warning-lighten=Kleur lichter maken bij waarschuwingsstatus
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Kleurensysteem
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribuut_Beschrijving
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribuut_Naam
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Aangepaste contactindeling
 custom-control=Aangepast besturingselement
 custom-control-border-color=Randkleur aangepast besturingselement
 custom-control-disabled-border-color=Randkleur aangepast besturingselement uitgeschakeld
-custom-control-focus-color=Focuskleur aangepast besturingselement
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Labelkleur aangepast besturingselement
 custom-control-label-font-size=Tekengrootte label aangepast besturingselement
 custom-control-label-font-weight=Tekengewicht label aangepast besturingselement
