--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_TW.properties
@@ -798,7 +798,7 @@ api-account-id=API 帳戶 ID
 api-endpoint=API 端點
 api-endpoint-description=設置 Computer Vision API V2 的端點（例如 {0}）。如需瞭解更多資訊，請參閱 {1}。
 api-login-id=API 登入 ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API 用戶 ID
 app-id=App ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=品牌主要顏色
 color-brand-primary-darken-1=品牌主要顏色變暗 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=品牌主要顏色變暗 3
 color-brand-primary-darken-4=品牌主要顏色變暗 4
 color-brand-primary-darken-5=品牌主要顏色變暗 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=品牌主要顏色變亮 5
 color-brand-primary-lighten-6=品牌主要顏色變亮 6
 color-brand-secondary=品牌次要顏色
 color-brand-secondary-darken-1=品牌次要顏色變暗 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=品牌次要顏色變暗 3
 color-brand-secondary-darken-4=品牌次要顏色變暗 4
 color-brand-secondary-darken-5=品牌次要顏色變暗 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=從顏色選取器選擇顏色。
 color-field-type-label=顏色
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=中性色 0
 color-neutral-1=中性色 1
 color-neutral-2=中性色 2
@@ -1919,13 +1922,25 @@ color-neutral-9=中性色 9
 color-neutral-10=中性色 10
 color-scheme=顏色設計
 color-state-error=錯誤狀態顏色
-color-state-error-lighten=錯誤狀態顏色變亮
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=訊息狀態顏色
-color-state-info-lighten=訊息狀態顏色變亮
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=成功狀態顏色
-color-state-success-lighten=成功狀態顏色變亮
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=警告狀態顏色
-color-state-warning-lighten=警告狀態顏色變亮
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=顏色系統
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=自定義聯絡人映射
 custom-control=Custom Control (Automatic Copy)
 custom-control-border-color=自定義控制邊界顏色
 custom-control-disabled-border-color=自定義控制停用邊界顏色
-custom-control-focus-color=自定義控制焦點顏色
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=自定義控制欄位標題顏色
 custom-control-label-font-size=自定義控制欄位標題字體大小
 custom-control-label-font-weight=自定義控制欄位標題字體粗細
@@ -4094,7 +4109,7 @@ home-page-url-help=提供您的應用程式首頁的 URL。
 home-page-url-is-invalid=此網站 URL 無效。
 home-page-url-scheme-is-invalid=此網站 URL 協定無效，只有 http 與 https 是允許的。
 home-url=首頁網址
-home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至  /web/guest/home。
+home-url-help=這是Liferay實例的首頁。例如，如果您希望首頁為http://localhost:8080/web/guest/home ，設定此至 /web/guest/home。
 hook-plugins=Hook插件
 hostname=主機名稱或 IP 位址
 hours-abbreviation=h
@@ -7182,7 +7197,7 @@ recaptcha-no-script-url=reCAPTCHA No Script URL
 recaptcha-private-key=重啟碼以取得私密鑰
 recaptcha-public-key=重啟碼以取得公開鑰
 recaptcha-script-url=reCAPTCHA Script URL
-recaptcha-verify-url=reCAPTCHA  URL
+recaptcha-verify-url=reCAPTCHA URL
 receive-a-notification-when-document-has-expired-in-a-folder-you-are-subscribed-to=您訂閱的資料夾裡的文件已過期。
 receive-a-notification-when-review-is-needed-on-document-in-a-folder-you-are-subscribed-to=檢視您訂閱的資料夾裡的文件。
 receive-a-notification-when-someone=收到一個通知，當有人...
