--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_ar.properties
@@ -798,7 +798,7 @@ api-account-id=معرف حساب API
 api-endpoint=نقطة نهاية واجهة API
 api-endpoint-description=يعين نقطة نهاية لـ Computer Vision API V2 (مثل {0}). راجع {1} لمزيد من المعلومات.
 api-login-id=رمز دخول API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=عنوان URL لواجهة برمجة التطبيقات
 api-username=معرف مستخدم API
 app-id=معرف التطبيق
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=لون العلامة التجارية الرئيسية
 color-brand-primary-darken-1=Color Brand Primary Darken 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Color Brand Primary Darken 3
 color-brand-primary-darken-4=Color Brand Primary Darken 4
 color-brand-primary-darken-5=Color Brand Primary Darken 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color Brand Primary Lighten 5
 color-brand-primary-lighten-6=Color Brand Primary Lighten 6
 color-brand-secondary=لون العلامة التجارية الثانوية
 color-brand-secondary-darken-1=Color Brand Secondary Darken 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Color Brand Secondary Darken 3
 color-brand-secondary-darken-4=Color Brand Secondary Darken 4
 color-brand-secondary-darken-5=Color Brand Secondary Darken 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=حدد لونًا من منتقي الألوان.
 color-field-type-label=اللون
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=لون محايد 0
 color-neutral-1=لون محايد 1
 color-neutral-2=لون محايد 2
@@ -1919,13 +1922,25 @@ color-neutral-9=لون محايد 9
 color-neutral-10=لون محايد 10
 color-scheme=تشكيلات الألوان
 color-state-error=خطأ حالة اللون
-color-state-error-lighten=تمت إضاءة خطأ حالة اللون
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=معلومات حالة اللون
-color-state-info-lighten=تمت إضاءة معلومات حالة اللون
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=نجاح حالة اللون
-color-state-success-lighten=تمت إضاءة نجاح حالة اللون
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=تحذير حالة اللون
-color-state-warning-lighten=تمت إضاءة تحذير حالة اللون
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=نظام الألوان
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=تعيين جهة اتصال مخصصة
 custom-control=تحكم مخصص
 custom-control-border-color=لون حد التحكم المخصص
 custom-control-disabled-border-color=لون حد معطل للتحكم المخصص
-custom-control-focus-color=لون تركيز التحكم المخصص
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=لون تسمية التحكم المخصص
 custom-control-label-font-size=حجم خط تسمية التحكم المخصص
 custom-control-label-font-weight=وزن خط تسمية التحكم المخصص
