--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_fr.properties
@@ -798,7 +798,7 @@ api-account-id=ID de compte de l'API
 api-endpoint=Point de terminaison de l'API
 api-endpoint-description=Définit le point de terminaison de l'API V2 Computer Vision (par ex. : {0}). Consultez {1} pour plus d'informations.
 api-login-id=ID de connexion API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL de L'API
 api-username=ID utilisateur de l'API
 app-id=ID de l'application
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Couleur Primaire de marque
 color-brand-primary-darken-1=Couleur Primaire de marque Sombre 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Couleur Primaire de marque Sombre 3
 color-brand-primary-darken-4=Couleur Primaire de marque Sombre 4
 color-brand-primary-darken-5=Couleur Primaire de marque Sombre 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Couleur Primaire de marque Clair 5
 color-brand-primary-lighten-6=Couleur Primaire de marque Clair 6
 color-brand-secondary=Couleur Secondaire de marque
 color-brand-secondary-darken-1=Couleur Secondaire de marque Sombre 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Couleur Secondaire de marque Sombre 3
 color-brand-secondary-darken-4=Couleur Secondaire de marque Sombre 4
 color-brand-secondary-darken-5=Couleur Secondaire de marque Sombre 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Sélectionnez une couleur dans un sélecteur de couleurs.
 color-field-type-label=Couleur
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Couleur Neutre 0
 color-neutral-1=Couleur Neutre 1
 color-neutral-2=Couleur Neutre 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Couleur Neutre 9
 color-neutral-10=Couleur Neutre 10
 color-scheme=Assortiments de couleurs
 color-state-error=Couleur d'état erreur
-color-state-error-lighten=Couleur d'état erreur claire
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Couleur d'état info
-color-state-info-lighten=Couleur d'état info claire
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Couleur d'état réussite
-color-state-success-lighten=Couleur d'état réussite claire
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Couleur d'état avertissement
-color-state-warning-lighten=Couleur d'état avertissement claire
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Système de couleur
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Mappage de contact personalisé
 custom-control=Contrôle personnalisé
 custom-control-border-color=Couleur de bordure de contrôle personnalisé
 custom-control-disabled-border-color=Couleur de bordure désactivée de contrôle personnalisé
-custom-control-focus-color=Couleur de ciblage de contrôle personnalisé
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Couleur de libellé de contrôle personnalisé
 custom-control-label-font-size=Taille de police de libellé de contrôle personnalisé
 custom-control-label-font-weight=Poids de police de libellé de contrôle personnalisé
