--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_pt_BR.properties
@@ -798,7 +798,7 @@ api-account-id=ID da conta API
 api-endpoint=Ponto de Extremidade da API
 api-endpoint-description=Define o endpoint para a API V2 do visual computacional (por exemplo, {0}). Consulte {1} para obter mais informações.
 api-login-id=ID de login da API
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=URL da API
 api-username=ID do usuário API
 app-id=ID de aplicativo
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Marca primaria de cor
 color-brand-primary-darken-1=Escurecimento de marca primaria de cor 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Escurecimento de marca primaria de cor 3
 color-brand-primary-darken-4=Escurecimento de marca primaria de cor 4
 color-brand-primary-darken-5=Escurecimento de marca primaria de cor 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Clareamento de marca primaria de cor 5
 color-brand-primary-lighten-6=Clareamento de marca primaria de cor 6
 color-brand-secondary=Marca secundária de cor
 color-brand-secondary-darken-1=Escurecimento de marca secundária de cor 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Escurecimento de marca secundária de cor 3
 color-brand-secondary-darken-4=Escurecimento de marca secundária de cor 4
 color-brand-secondary-darken-5=Escurecimento de marca secundária de cor 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Selecionar cor de um colorpicker.
 color-field-type-label=Cor
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Cor neutra 0
 color-neutral-1=Cor neutra 1
 color-neutral-2=Cor neutra 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Cor neutra 9
 color-neutral-10=Cor neutra 10
 color-scheme=Esquema de Cor
 color-state-error=Erro de estado de cor
-color-state-error-lighten=Iluminação de erro de estado de cor
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Informação de estado de cor
-color-state-info-lighten=Iluminação de informações de estado de cor
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Sucesso de estado de cor
-color-state-success-lighten=Iluminação de sucesso de estado de cor
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Aviso de estado de cor
-color-state-warning-lighten=Iluminação de aviso de estado de cor
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Sistema de cor
 com.liferay.configuration.admin.web.test.attribute.description=Descrição_do_atributo_teste
 com.liferay.configuration.admin.web.test.attribute.name=Nome_do_atributo_teste
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Mapeamento Customizado do Contato
 custom-control=Controle personalizado
 custom-control-border-color=Cor da borda de controle personalizada
 custom-control-disabled-border-color=Cor da borda do controle personalizado desativada
-custom-control-focus-color=Cor de foco de controle personalizada
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Cor do rótulo de controle personalizada
 custom-control-label-font-size=Tamanho de fonte do rótulo de controle personalizada
 custom-control-label-font-weight=Espessura da fonte do rótulo de controle personalizada
