--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_sv.properties
@@ -798,7 +798,7 @@ api-account-id=API-konto-ID
 api-endpoint=API-slutpunkt
 api-endpoint-description=Ställer in slutpunkt för Computer Vision API V2 (t.ex. {0}). Se {1} för mer information.
 api-login-id=API-inloggnings-ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API-URL
 api-username=API-användar-ID
 app-id=App-ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Färg, varumärke, primär
 color-brand-primary-darken-1=Färg, varumärke, primär, mörkare 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Färg, varumärke, primär, mörkare 3
 color-brand-primary-darken-4=Färg, varumärke, primär, mörkare 4
 color-brand-primary-darken-5=Färg, varumärke, primär, mörkare 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Färg, varumärke, primär, ljusare 5
 color-brand-primary-lighten-6=Färg, varumärke, primär, ljusare 6
 color-brand-secondary=Färg, varumärke, sekundär
 color-brand-secondary-darken-1=Färg, varumärke, sekundär, mörkare 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Färg, varumärke, sekundär, mörkare 3
 color-brand-secondary-darken-4=Färg, varumärke, sekundär, mörkare 4
 color-brand-secondary-darken-5=Färg, varumärke, sekundär, mörkare 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=Välj färg från en färgväljare.
 color-field-type-label=Färg
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Neutral färg 0
 color-neutral-1=Neutral färg 1
 color-neutral-2=Neutral färg 2
@@ -1919,13 +1922,25 @@ color-neutral-9=Neutral färg 9
 color-neutral-10=Neutral färg 10
 color-scheme=Färgschema
 color-state-error=Fel med färgtillstånd
-color-state-error-lighten=Fel med ljusare färgtillstånd
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Information om färgtillstånd
-color-state-info-lighten=Information om ljusare färgtillstånd
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Färgtillstånd lyckades
-color-state-success-lighten=Ljusare färgtillstånd lyckades
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Varning för färgtillstånd
-color-state-warning-lighten=Varning för ljusare färgtillstånd
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=Färgsystem
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=Anpassad kontaktmappning
 custom-control=Anpassad kontroll
 custom-control-border-color=Anpassad kontroll för gränsfärg
 custom-control-disabled-border-color=Anpassad kontroll inaktiverad för gränsfärg
-custom-control-focus-color=Anpassad kontroll för fokusfärg
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Anpassad kontroll för etikettfärg
 custom-control-label-font-size=Teckenstorlek för anpassad kontroll för etikett
 custom-control-label-font-weight=Teckengrovlek för anpassad kontroll för etikett
