--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_th.properties
@@ -798,7 +798,7 @@ api-account-id=รหัสบัญชี API (Automatic Translation)
 api-endpoint=API เอ็นพ้อยท์
 api-endpoint-description=กำหนดจุดสิ้นสุดสำหรับ Computer Vision API V2 (เช่น {0}) ดู {1} สำหรับข้อมูลเพิ่มเติม
 api-login-id=ID ล็อกอิน API (Automatic Translation)
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL (Automatic Copy)
 api-username=รหัสผู้ใช้ API (Automatic Translation)
 app-id=รหัสแอป (Automatic Translation)
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=Color Brand Primary (Automatic Copy)
 color-brand-primary-darken-1=Color Brand Primary Darken 1 (Automatic Copy)
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=Color Brand Primary Darken 3 (Automatic Copy)
 color-brand-primary-darken-4=Color Brand Primary Darken 4 (Automatic Copy)
 color-brand-primary-darken-5=Color Brand Primary Darken 5 (Automatic Copy)
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=Color Brand Primary Lighten 5 (Automatic Copy)
 color-brand-primary-lighten-6=Color Brand Primary Lighten 6 (Automatic Copy)
 color-brand-secondary=Color Brand Secondary (Automatic Copy)
 color-brand-secondary-darken-1=Color Brand Secondary Darken 1 (Automatic Copy)
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=Color Brand Secondary Darken 3 (Automatic Copy)
 color-brand-secondary-darken-4=Color Brand Secondary Darken 4 (Automatic Copy)
 color-brand-secondary-darken-5=Color Brand Secondary Darken 5 (Automatic Copy)
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=เลือกสีจากตัวเลือกสี (Automatic Translation)
 color-field-type-label=สี (Automatic Translation)
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=Color Neutral 0 (Automatic Copy)
 color-neutral-1=Color Neutral 1 (Automatic Copy)
 color-neutral-2=Color Neutral 2 (Automatic Copy)
@@ -1919,13 +1922,25 @@ color-neutral-9=Color Neutral 9 (Automatic Copy)
 color-neutral-10=Color Neutral 10 (Automatic Copy)
 color-scheme=แบบแผนชุดสี
 color-state-error=Color State Error (Automatic Copy)
-color-state-error-lighten=Color State Error Lighten (Automatic Copy)
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=Color State Info (Automatic Copy)
-color-state-info-lighten=Color State Info Lighten (Automatic Copy)
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=Color State Success (Automatic Copy)
-color-state-success-lighten=Color State Success Lighten (Automatic Copy)
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=Color State Warning (Automatic Copy)
-color-state-warning-lighten=Color State Warning Lighten (Automatic Copy)
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=ระบบสี (Automatic Translation)
 com.liferay.configuration.admin.web.test.attribute.description=คำอธิบายคุณสมบัติทดสอบ
 com.liferay.configuration.admin.web.test.attribute.name=ชื่อคุณสมบัติทดสอบ
@@ -2371,7 +2386,7 @@ custom-contact-mapping=การแมปที่ติดต่อแบบก
 custom-control=Custom Control (Automatic Copy)
 custom-control-border-color=Custom Control Border Color (Automatic Copy)
 custom-control-disabled-border-color=Custom Control Disabled Border Color (Automatic Copy)
-custom-control-focus-color=Custom Control Focus Color (Automatic Copy)
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=Custom Control Label Color (Automatic Copy)
 custom-control-label-font-size=Custom Control Label Font Size (Automatic Copy)
 custom-control-label-font-weight=Custom Control Label Font Weight (Automatic Copy)
