--- a/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
+++ b/modules/apps/portal-language/portal-language-lang/src/main/resources/content/Language_zh_CN.properties
@@ -798,7 +798,7 @@ api-account-id=API 帐户 ID
 api-endpoint=API 端点
 api-endpoint-description=设置 Computer Vision API V2 的端点（例如 {0}）。如需了解更多信息，请参阅{1}。
 api-login-id=API 登录 ID
-api-provider-error-message=The communication with the API provider failed. Please check your API Key or contact your Technical Support (Automatic Copy)
+api-provider-error-message=The communication with the API provider failed. Please check your API key and try again. (Automatic Copy)
 api-url=API URL
 api-username=API 用户 ID
 app-id=应用 ID
@@ -1879,6 +1879,7 @@ color-action-secondary-inverted-hover=Color Action Secondary Inverted Hover (Aut
 color-action-secondary-visited=Color Action Secondary Visited (Automatic Copy)
 color-brand-primary=品牌主要颜色
 color-brand-primary-darken-1=品牌主要颜色变暗 1
+color-brand-primary-darken-2=Color Brand Primary Darken 2 (Automatic Copy)
 color-brand-primary-darken-3=品牌主要颜色变暗 3
 color-brand-primary-darken-4=品牌主要颜色变暗 4
 color-brand-primary-darken-5=品牌主要颜色变暗 5
@@ -1890,6 +1891,7 @@ color-brand-primary-lighten-5=品牌主要颜色变亮 5
 color-brand-primary-lighten-6=品牌主要颜色变亮 6
 color-brand-secondary=品牌次要颜色
 color-brand-secondary-darken-1=品牌次要颜色变暗 1
+color-brand-secondary-darken-2=Color Brand Secondary Darken 2 (Automatic Copy)
 color-brand-secondary-darken-3=品牌次要颜色变暗 3
 color-brand-secondary-darken-4=品牌次要颜色变暗 4
 color-brand-secondary-darken-5=品牌次要颜色变暗 5
@@ -1906,6 +1908,7 @@ color-chart-4=Color Chart 4 (Automatic Copy)
 color-chart-5=Color Chart 5 (Automatic Copy)
 color-field-type-description=从颜色选取器中选择颜色。
 color-field-type-label=颜色
+color-focus=Color Focus (Automatic Copy)
 color-neutral-0=中性色 0
 color-neutral-1=中性色 1
 color-neutral-2=中性色 2
@@ -1919,13 +1922,25 @@ color-neutral-9=中性色 9
 color-neutral-10=中性色 10
 color-scheme=配色方案
 color-state-error=错误状态颜色
-color-state-error-lighten=错误状态颜色变亮
+color-state-error-darken-1=Color State Error Darken 1 (Automatic Copy)
+color-state-error-darken-2=Color State Error Darken 2 (Automatic Copy)
+color-state-error-lighten-1=Color State Error Lighten 1 (Automatic Copy)
+color-state-error-lighten-2=Color State Error Lighten 2 (Automatic Copy)
 color-state-info=信息状态颜色
-color-state-info-lighten=信息状态颜色变亮
+color-state-info-darken-1=Color State Info Darken 1 (Automatic Copy)
+color-state-info-darken-2=Color State Info Darken 2 (Automatic Copy)
+color-state-info-lighten-1=Color State Info Lighten 1 (Automatic Copy)
+color-state-info-lighten-2=Color State Info Lighten 2 (Automatic Copy)
 color-state-success=成功状态颜色
-color-state-success-lighten=成功状态颜色变亮
+color-state-success-darken-1=Color State Success Darken 1 (Automatic Copy)
+color-state-success-darken-2=Color State Success Darken 2 (Automatic Copy)
+color-state-success-lighten-1=Color State Success Lighten 1 (Automatic Copy)
+color-state-success-lighten-2=Color State Success Lighten 2 (Automatic Copy)
 color-state-warning=警告状态颜色
-color-state-warning-lighten=警告状态颜色变亮
+color-state-warning-darken-1=Color State Warning Darken 1 (Automatic Copy)
+color-state-warning-darken-2=Color State Warning Darken 2 (Automatic Copy)
+color-state-warning-lighten-1=Color State Warning Lighten 1 (Automatic Copy)
+color-state-warning-lighten-2=Color State Warning Lighten 2 (Automatic Copy)
 color-system=颜色系统
 com.liferay.configuration.admin.web.test.attribute.description=Test_Attribute_Description
 com.liferay.configuration.admin.web.test.attribute.name=Test_Attribute_Name
@@ -2371,7 +2386,7 @@ custom-contact-mapping=自定义联系人映射
 custom-control=自定义控件
 custom-control-border-color=自定义控件边框颜色
 custom-control-disabled-border-color=自定义控件禁用边框颜色
-custom-control-focus-color=自定义控件焦点颜色
+custom-control-hover-color=Custom Control Hover Color (Automatic Copy)
 custom-control-label-color=自定义控件标签颜色
 custom-control-label-font-size=自定义控件标签字体大小
 custom-control-label-font-weight=自定义控件标签字体粗细
